WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242406
WebKit should track regions for content which is not scrolled by the main scroll view
https://bugs.webkit.org/show_bug.cgi?id=242406
Summary
WebKit should track regions for content which is not scrolled by the main scr...
Mike Wyrzykowski
Reported
2022-07-06 12:21:56 PDT
WebKit should track regions for content which is not scrolled by the main scroll view
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2022-07-06 12:26:58 PDT
radar://90045126
Mike Wyrzykowski
Comment 2
2022-07-06 13:53:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2136
EWS
Comment 3
2022-07-14 15:33:32 PDT
Committed
252477@main
(3723ab78e840): <
https://commits.webkit.org/252477@main
> Reviewed commits have been landed. Closing PR #2136 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug