Cherry-pick 3723ab78e840. rdar://problem/90045126

WebKit should track regions for content which is not scrolled by the main scroll view
    https://bugs.webkit.org/show_bug.cgi?id=242406

    Reviewed by Tim Horton.

    Compute a set of fixed rectangles which are not scrolled by
    the main scroll view.

    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.h:
    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
    (-[WKWebView _didCommitLayerTree:]):
    Update the overlay regions.

    (addOverlayEventRegions):
    Recursive function which builds overlay regions from the child layers.

    (-[WKWebView _updateOverlayRegions:destroyedLayers:]):
    If there are destroyed or changed layers, recompute the set of overlay
    regions and cleanup any removed layers which may exist in the fixed IDs
    map as well as the overlay region map.

    (-[WKWebView _overlayRegions]):
    Compute the overlay regions as an array of NSData instances.

    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.h:
    (WebKit::RemoteScrollingCoordinatorProxy::fixedScrollingNodeLayerIDs const):
    Return a reference to the fixed node IDs.

    * Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.mm:
    (WebKit::RemoteScrollingCoordinatorProxy::removeFixedScrollingNodeLayerIDs):
    Remove layerIDs for layers which no longer exist.

    (WebKit::RemoteScrollingCoordinatorProxy::connectStateNodeLayers):
    Save the fixed node IDs.

    * Source/WebKit/UIProcess/ios/WKScrollView.mm:
    (-[WKScrollView overlayRegions]):
    Call into the web view to get the overlay regions.

    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.h:
    Add mutator for WKWebView to update the overlay regions.

    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeHost.h:
    (WebKit::RemoteLayerTreeHost::overlayRegionsWithIDs const):
    Add hash map for tracking overlay regions.

    (WebKit::RemoteLayerTreeHost::updateOverlayRegionsWithIDs):
    Allow updating the hash map.

    Canonical link: https://commits.webkit.org/252477@main

Canonical link: https://commits.webkit.org/252432.8@safari-7614-branch